[package]
name = "cargo-cdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cargo subcommand for the AWS CDK"
repository = "https://github.com/matthunz/cdk-rs"

[dependencies]
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
reqwest = "0.12.4"
futures = "0.3.30"
zip = "2.1.2"
